--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -9,66 +9,65 @@
 /**
  * Button color
  *
- * @param background color
- * @param text color
+ * @param color background color
  */
-btnColor(c, t)
-  color: t
-  background-color: c
+set-button-color(color)
+  if dark(color)
+    color: #fff
+  else
+    color: color-normal
 
-  &.hover,
+  background-color: color
+
+  &.hover
   &:hover
-    background-color: lighten(c, 6)
+    background-color: lighten(color, 6)
 
-  &.active,
+  &.active
   &:active
-    background-color: darken(c, 4)
+    background-color: darken(color, 4)
 
-  &.disabled,
+  &.disabled
   &[disabled]
-    &,
-    &:hover,
+    &
+    &:hover
     &:active
-      border: 0
       opacity: .6
-      background: c
+
+      border: 0
+      background: color
+
       box-shadow: none
       cursor: not-allowed
 
 /**
  * Create a button
  *
- * @param c background color
- * @param t text color
+ * @param color background color
  */
-makeBtn(c, t)
+make-button(color)
   border: 0
   outline: 0
 
-  margin: .225em
   cursor: pointer
   border-radius: 3px
 
   text-align: center
   line-height: 1.5em
-  padding: .35em 1.2em
-
   text-decoration: none
+
+  padding: .35em 1.2em
   display: inline-block
   vertical-align: middle
 
   box-shadow: 0 0 1px rgba(0, 0, 0, .4)
   transition: background .4s ease, box-shadow .2s ease
 
-  btnColor: c t
-
-  [class*=icon-]:before
-    color: t
-    transform: scale(1.2)
+  set-button-color: color
 
   &:hover
     box-shadow: 0 0px 3px rgba(0, 0, 0, .4)
 
-  &.active,
+  &.active
   &:active
     box-shadow: 0 1px 3px rgba(0, 0, 0, .4)
