Font: Fix spining problem

--- a/src/fonts/foundation.styl
+++ b/src/fonts/foundation.styl
@@ -58,7 +58,7 @@ fi-prefix = "icon-"
   font-size 150%
 
 // Spin
-.{fi-prefix}spin
+.{fi-prefix}spin::before
   animation: spin 2s infinite linear
 
 // Font
