--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -79,21 +79,19 @@ set-button-color(color)
  */
 make-ghost-button(color)
   color: color
-
-  border: 1px solid
   background-color: transparent
 
   text-shadow: none
-  box-shadow: none
+  box-shadow: 0 0 0 1px
 
   &.hover
   &:hover
-    box-shadow: none
+    box-shadow: 0 0 0 1px
     background-color: rgba(0, 0, 0, .3)
 
   &.active
   &:active
-    box-shadow: none
+    box-shadow: 0 0 0 1px
     background-color: rgba(0, 0, 0, .6)
 
   &:visited
@@ -110,8 +108,8 @@ set-ghost-button-color(color)
   if dark(color)
     &:hover
     &.hover
-      background: rgba(255, 255, 255, .5)
+      background: rgba(255, 255, 255, .3)
 
     &:active
     &.active
-      background: rgba(255, 255, 255, .8)
+      background: rgba(255, 255, 255, .6)
