--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -11,7 +11,7 @@
 table
   margin-bottom: 1.5em
   border-spacing: 0
-  border-collapse: separate
+  border-collapse: collapse
 
   &.table
     width: 100%
