--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -13,9 +13,6 @@ table
   border-spacing: 0
   border-collapse: collapse
 
-  &.table
-    width: 100%
-
   thead
   tbody
   tfoot
@@ -31,14 +28,14 @@ table
           color: color-gray
 
     tr.table-active
-      th,
+      th
       td
         border-left-color: color-border-mark !important
         background-color: color-background-table-mark !important
 
   thead
     tr
-      th,
+      th
       td
         border-top: 0
         vertical-align: bottom
@@ -48,6 +45,9 @@ table
     tr:first-child
       td
         border-top: 2px solid color-border-normal
+
+.table
+  width: 100%
 
 .table-bordered
   border: 1px solid color-border-light
@@ -82,3 +82,11 @@ table
   th
   td
     text-align: center
+
+.table-responsive
+  min-hieght: .01%
+  overflow-x: auto
+
+  @media mq-mobile
+    width: 100%
+    overflow-y: hidden
