Elements: Align codes in pre

--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -47,8 +47,10 @@ pre
 
   code
   tt
+    margin: 0
     padding: 0
     border: none
+
     font-size: 1rem
     background: none
 
@@ -78,9 +80,3 @@ blockquote
 
   & + p
     margin-top: 1em
-
-@media mq-mobile
-  pre
-  blockquote
-      margin-left: 0
-      margin-right: 0
