Typography: Increse the spacing of each paragraph

--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -8,11 +8,6 @@
 
 @require "../variables"
 
-*:lang(zh-Latn),
-*:lang(ja-Latn),
-*:not(:lang(zh)):not(:lang(ja))
-  font-family: font-family-sans-serif
-
 body
   font-weight: 400
 
@@ -28,7 +23,7 @@ body
 
 p
   margin-top: 0
-  margin-bottom: .5em
+  margin-bottom: 1em
 
   line-height: 1.86
 
