--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -80,14 +80,12 @@ make-ghost-button(color)
   background-color: transparent
 
   text-shadow: none
-  box-shadow: 0 0 0 1px
+  box-shadow: 0 0 0 1px inset
 
   &:hover
-    box-shadow: 0 0 0 1px
     background-color: rgba(0, 0, 0, .3)
 
   &:active
-    box-shadow: 0 0 0 1px
     background-color: rgba(0, 0, 0, .6)
 
   &:visited
