--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -83,9 +83,11 @@ make-ghost-button(color)
   box-shadow: 0 0 0 1px inset
 
   &:hover
+    box-shadow: 0 0 0 1px inset
     background-color: rgba(0, 0, 0, .3)
 
   &:active
+    box-shadow: 0 0 0 1px inset
     background-color: rgba(0, 0, 0, .6)
 
   &:visited
