Elements: Fix unproper filename

--- a/src/components/acomment.styl
+++ b/src/components/acomment.styl
@@ -1,5 +1,5 @@
 // ===============================================
-// Components / Acommet.styl                    ||
+// Components / Acomment.styl                    ||
 //                                              ||
 // =============================================||
 // Copyright 2015 @ Rakume<i@fake.moe>          ||
