--- a/src/lutachu.styl
+++ b/src/lutachu.styl
@@ -24,7 +24,7 @@
 @require "elements/form"
 @require "elements/table"
 
-@require "components/acommet"
+@require "components/acomment"
 @require "components/card"
 @require "components/nav"
 
