Typography: Remove useless code

--- a/src/lutachu.styl
+++ b/src/lutachu.styl
@@ -12,6 +12,7 @@
 @require "fonts/foundation"
 @require "layout/grid"
 
+@require "typography/article"
 @require "typography/figure"
 @require "typography/list"
 @require "typography/poem"
