--- a/src/normalize.styl
+++ b/src/normalize.styl
@@ -89,6 +89,7 @@ template
 
 a
   background-color: transparent
+  text-deocration: none
 
 /**
  * Improve readability of focused elements when they are also in an
