Nav: Change the space between two items

--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -2,7 +2,8 @@
 // Components / Nav.styl                                                     ||
 //                                                                           ||
 // ==========================================================================||
-// Copyright 2015 @ Rakume<i@fake.moe> & Awc Cho<orancho@outlook.com>        ||
+// Copyright 2015 @ Rakume<i@fake.moe>                                       ||
+//                @ Awc Cho<orancho@outlook.com>                             ||
 // MIT License                                                               ||
 // ============================================================================
 
@@ -39,11 +40,11 @@
 
       a
         display: block
-        padding: 0 1.5em
+        padding: 0 .85em
 
-      &:hover
+      &::hover
         background-color: rgba(0, 0, 0, .2)
 
       &.active,
-      &:active
+      &::active
         background-color: rgba(0, 0, 0, .6)
