Typogrography: Fix build error in typography.styl

--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -70,13 +70,8 @@ em
   font-weight: inherit
   text-decoration: inherit
 
-  -webkit-text-emphasis: filled circle
-  -moz-text-emphasis: filled circle
   text-emphasis: filled circle
-
-  -webkit-text-emphasis-position: under
-  -moz-text-emphasis-position: under
-  text-emphasis-position: under
+  text-emphasis-position: under left
 
 i
   font-style: italic
