Typography: Make  wider

--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -85,11 +85,18 @@ sup
     text-decoration: none
 
 hr
-  width: 20%
   display: block
   border: 0 none
   margin: 2em auto
-  border-top: 2px solid color-border-normal
+  border-top: 1px solid color-border-normal
+
+  + h1
+  + h2
+  + h3
+  + h4
+  + h5
+  + h6
+    margin-top: -.4em
 
 abbr[title]
 dfn[title]
