Typography: Make typography more standard

--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -49,29 +49,13 @@ img
 // Symbol
 
 b
-em
 cite
 strong
   color: color-normal
-  font-weight: 700
+  font-weight: bold
 
   a
     color: inherit
-
-em
-cite
-  font-style: normal
-
-  a
-    font-style: normal
-
-em
-  font-style: inherit
-  font-weight: inherit
-  text-decoration: inherit
-
-  text-emphasis: filled circle
-  text-emphasis-position: under left
 
 i
   font-style: italic
@@ -79,7 +63,7 @@ i
 img
   margin: .2em 0
 
-sub,
+sub
 sup
   a
     text-decoration: none
