Typography: Change `font-size` and `margin` of elements

--- a/src/lutachu.styl
+++ b/src/lutachu.styl
@@ -20,6 +20,7 @@
 @require "typography/title"
 @require "typography/zh/counter"
 
+@require "elements/blockquote"
 @require "elements/button"
 @require "elements/code"
 @require "elements/form"
