--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -10,37 +10,26 @@
 
 tt
 code
-pre
-  font-family: font-family-monospace
+  margin: 0 .2rem
+  padding: .1rem .6rem
 
-tt
-code
-  font-size: .75em
-
-  margin: 0 .3em
-  padding: .1em .5em
-
-  border-radius: 3px
   word-break: break-all
 
   background: color-background-code
-  border: 1px solid color-border-normal
 
 pre
   display block
   overflow auto
 
-  padding: .8em 1.3em
-  margin 1.6em -1.3em
-
-  font-size .85em
-  line-height 1.5
+  padding: .8em 1.5rem
+  margin-left: -1.5rem
+  margin-right: -1.5rem
 
   color: color-dark-grey
   background: color-background-code
-  border-left: 2px solid color-border-normal
+  border-left: .3rem solid color-border-normal
 
-  transition: .3s ease border
+  transition: .3s ease border-left-color
 
   &:hover
     border-left-color: color-border-focus
@@ -51,32 +40,4 @@ pre
     padding: 0
     border: none
 
-    font-size: 1rem
-    background: none
-
-blockquote
-  padding: 0 1.3em
-  margin: 1em -1.3em 0
-
-  line-height: 1.62
-
-  color: color-dark-grey
-  border-left: 2px solid color-border-normal
-
-  a
-    color: color-link-grey
-
-  p
-    margin-bottom: .5em
-
-    &:last-child
-      margin-bottom: 0
-
-  b
-  em
-  cite
-  strong
-    color: #777
-
-  & + p
-    margin-top: 1em
+    background: transparent
