--- a/src/typography/title.styl
+++ b/src/typography/title.styl
@@ -14,37 +14,32 @@ h3
 h4
 h5
 h6
-  font-weight: normal
-
-  color: color-normal
+  font-weight: 300
   font-family: font-family-sans-serif
 
-h1
-  font-size: 2.5em
+  margin-bottom: 2rem
+  margin-top: 0
 
-  margin .6em 0 .4em
+h1
+  font-size: 5rem
+  line-height: 1.2
 
 h2
-  font-size: 1.8em
-
-  margin: .8em 0 .5em
+  font-size: 4.2rem
+  line-height: 1.25
 
 h3
-  font-size: 1.5em
-
-  margin: .7em 0
+  font-size: 3.6rem
+  line-height: 1.3
 
 h4
-  font-weight: bold
-  font-size: 1.2em
-  line-height: 1.5
-
-  margin: 1em 0
+  font-size: 3.0rem
+  line-height: 1.35
 
 h5
-h6
-  font-size: 1em
-  font-weight: bold
-  line-height: 1.86
+  font-size: 2.4rem
+  line-height: 1.5
 
-  margin: 1em 0
+h6
+  font-size: 1.5rem
+  line-height: 1.4
