--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -2,8 +2,8 @@
 // Components / Nav.styl                                                     ||
 //                                                                           ||
 // ==========================================================================||
-// Copyright 2015 @ Rakume<i@fake.moe>                                       ||
-//                @ Awc Cho<orancho@outlook.com>                             ||
+// Since 2015 @ Rakume<i@fake.moe>                                           ||
+//            @ Awc Cho<orancho@outlook.com>                                 ||
 // MIT License                                                               ||
 // ============================================================================
 
@@ -23,13 +23,13 @@
 
     text-decoration: none
 
-  a.nav-band
+  a.band
     font-weight: bold
 
   .container
     min-height: 3rem
 
-  ul.nav-group
+  ul.group
     margin: 0 !important
 
     li
