--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -2,7 +2,7 @@
 // Utilities.styl                               ||
 //                                              ||
 // =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
+// Since 2015 @ Rakume<i@fake.moe>              ||
 // MIT License                                  ||
 // ===============================================
 
@@ -78,8 +78,8 @@
     padding-left: 1em
     padding-right: 1em
 
-.radius
-  border-radius: 5px
+.-radius
+  border-radius: 3rem
 
-.circle
+.-circle
   border-radius: 99999999px
