--- a/src/variables.styl
+++ b/src/variables.styl
@@ -2,7 +2,7 @@
 // Variables.styl                               ||
 //                                              ||
 // =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
+// Since 2015 @ Rakume<i@fake.moe>              ||
 // MIT License                                  ||
 // ===============================================
 
@@ -35,6 +35,10 @@ color-border-focus  = #888
 color-border-mark   = #eaea90
 
 // Media queries
-mq-mobile = 'screen and (max-width: 768px)'
-mq-tablet = 'screen and (min-width: 768px) and (max-width: 1024px)'
-mq-normal = 'screen and (min-width: 1024px)'
+mq-mobile = 'screen and (max-width: 40rem)'
+mq-tablet = 'screen and (min-width: 40rem) and (max-width: 80rem)'
+mq-desktop = 'screen and (min-width: 120rem)'
+
+mq-non-mobile = 'screen and (min-width: 40rem)'
+mq-non-tablet = 'screen and (max-width: 40rem) and (min-width: 80rem)'
+mq-non-desktop = 'screen and (max-width: 120rem)'
