--- a/src/components/acomment.styl
+++ b/src/components/acomment.styl
@@ -2,7 +2,7 @@
 // Components / Acomment.styl                   ||
 //                                              ||
 // =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
+// Since 2015 @ Rakume<i@fake.moe>              ||
 // MIT License                                  ||
 // ===============================================
 
@@ -11,18 +11,18 @@
 .acommets
   position: relative
 
-  @media mq-tablet
-    width: 80%
-
-.commet
+.comment
   right: -15px
-  width: 120px
+  width: 120rem
+
   font-size: .9em
   padding-top: .4em
+
   position: absolute
-  font-style: normal
-  font-weight: normal
+
   margin-right: -@width
+
+  word-break: break-word
 
   &:before
     top: 0
@@ -30,9 +30,9 @@
     width: 40%
     content: ''
     position: absolute
-    border-top: 1px solid color-dark-grey
+    border-top: .2rem solid color-dark-grey
 
-  &.commet-left
+  &.-left
     left: -15px
     right: auto
     text-align: right
@@ -43,34 +43,18 @@
       right: 0
       left: auto
 
-  @media mq-tablet
-    width: 20%
-    margin-right: -@width
-
-    &.commet-left
-      left: auto
-      right: -15px
-      margin-left: 0
-      text-align: left
-      margin-right: -20%
-      margin-top: 10px
-
-    &.commet-left:before
-      left: 0
-      right: auto
-
-  @media mq-mobile
+  @media mq-non-desktop
     position: static
     margin-right: 0
 
-    &.commet-left
+    &.-left
       margin: 0
 
     &:before
       border: 0
-      content: '( '
+      content: ' ('
       position: static
       padding-left: 5px
 
     &:after
-      content: ' )'
+      content: ') '
