--- a/src/typography/zh/counter.styl
+++ b/src/typography/zh/counter.styl
@@ -2,11 +2,11 @@
 // Typograhpy / Zh / Counter.styl               ||
 //                                              ||
 // =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
+// Since 2015 @ Rakume<i@fake.moe>              ||
 // MIT License                                  ||
 // ===============================================
 
-.text-counter
+.counter
   &:lang(zh)
     counter-reset: ch1 ch2 ch3 ch4 ch5 ch6
 
