Button: Fix button do not display well

--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -16,22 +16,22 @@
     margin-right: .5em
     transform: scale(1.5)
 
-  .-primary
+  &.-primary
     set-button-color: color-primary
 
-  .-secondary
+  &.-secondary
     set-button-color: color-secondary
 
-  .-success
+  &.-success
     set-button-color: color-success
 
-  .-error
+  &.-error
     set-button-color: color-error
 
-  .-warning
+  &.-warning
     set-button-color: color-warning
 
-  .-ghost
+  &.-ghost
     make-ghost-button: #fff
 
     &.-primary
@@ -49,14 +49,14 @@
     &.-warning
       set-ghost-button-color: color-warning
 
-  .-xl
+  &.-xl
     font-size: 1.5em
 
-  .-lg
+  &.-lg
     font-size: 1.25em
 
-  .-sm
+  &.-sm
     font-size: .75em
 
-  .-xs
+  &.-xs
     font-size: .5em
