--- a/src/fonts/foundation.styl
+++ b/src/fonts/foundation.styl
@@ -33,18 +33,10 @@ fi-prefix = "icon-"
   font-style: normal;
 
 [class*={fi-prefix}]
-  display: inline-block;
+  display: inline-block
+  vertical-align: top
 
-  &:before
-    font-family: "foundation-icons";
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    text-decoration: inherit;
+  font: normal normal normal 14px/1 'foundation-icons'
 
 // Size
 
@@ -58,7 +50,7 @@ fi-prefix = "icon-"
   font-size 150%
 
 // Spin
-.{fi-prefix}spin::before
+.{fi-prefix}spin
   animation: spin 2s infinite linear
 
 // Font
