Button: Fix the height of buttons is not the same

--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -55,6 +55,7 @@ set-button-color(color)
     color: color-normal
 
   background-color: color
+  box-shadow: none
 
   &:hover
     background-color: lighten(color, 6)
