--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -11,7 +11,7 @@
 
 .button
   make-button: #fff
-  border: 1px solid color-border-light
+  box-shadow: color-border-light 0 0 0 1px inset
 
   [class*=icon-]
     margin-right: .5rem
