Acomment: Fix the width of aside comment

--- a/src/components/acomment.styl
+++ b/src/components/acomment.styl
@@ -12,11 +12,11 @@
   position: relative
 
 .comment
-  right: -15px
-  width: 120rem
+  right: -2rem
+  width: 12rem
 
-  font-size: .9em
-  padding-top: .4em
+  font-size: 1.2rem
+  padding-top: .4rem
 
   position: absolute
 
@@ -33,11 +33,11 @@
     border-top: .2rem solid color-dark-grey
 
   &.-left
-    left: -15px
+    left: -2rem
     right: auto
     text-align: right
     margin-right: 0
-    margin-left: -120px
+    margin-left: -12rem
 
     &:before
       right: 0
@@ -54,7 +54,7 @@
       border: 0
       content: ' ('
       position: static
-      padding-left: 5px
+      padding-left: .5rem
 
     &:after
       content: ') '
